# german_bridge

./: README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  STATS_ENDPOINT.md  docker-compose.yml  test_server.sh  test_stats.sh  test_websocket.sh
backend/migrations/: 20241207_init.sql
backend/src/: auth.rs  config.rs  connection.rs  error.rs  game.rs  game_state.rs  lib.rs  lobby.rs  main.rs  protocol.rs  router.rs  server.rs
backend/src/entities/: game.rs  game_player.rs  game_round.rs  lobby.rs  lobby_player.rs  mod.rs  prelude.rs  user.rs
backend/src/game_logic/: bidding.rs  card.rs  deck.rs  mod.rs  scoring.rs  trick.rs
backend/src/handlers/: auth.rs
backend/src/migrator/: mod.rs
backend/src/migrator/migration/: m20241207_000001_create_tables.rs  m20251207_025543_add_current_round.rs  mod.rs
backend/tests/: integration_tests.rs
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: app.css  app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/lib/components/: Auth.svelte  BidControls.svelte  Button.svelte  Card.svelte  Container.svelte  GameView.svelte  Hand.svelte  Input.svelte  LobbyList.svelte  LobbyView.svelte  Scorecard.svelte  ThemeToggle.svelte
frontend/src/lib/stores/: theme.ts  websocket.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/design-system/: +page.svelte
