[package]
name = "german-bridge-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "german_bridge_backend"
path = "src/lib.rs"

[[bin]]
name = "german-bridge-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
config = "0.14"
rand = "0.8"
futures = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
argon2 = "0.5"
jsonwebtoken = "9"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
